--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -16,6 +16,10 @@ body {
     }
 }
 
+section, nav {
+    overflow: hidden;
+}
+
 .page-wrap {
 
 }
