--- a/webapp/static/css/styles.css
+++ b/webapp/static/css/styles.css
@@ -143,6 +143,10 @@ body.legal-page {
   background-color: #f55a5d;
 }
 
+section, nav {
+  overflow: hidden;
+}
+
 .section-footer-scene {
   position: relative;
   height: 1278px;
